Premium design overhaul - Aesthetics, Typography and Glassmorphism

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <meta name="description"
         content="Tacos Benito - La mejor taquería tradicional con un toque moderno. Sabor auténtico Mexicano.">
     <title>Tacos Benito | Sabor Tradicional</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;800&family=Playfair+Display:ital,wght@0,400;0,700;1,400&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -73,9 +78,8 @@
         </div>
 
         <h3 style="color: var(--primary); margin-bottom: 20px; font-size: 2rem;" class="reveal">Hot-Dogs</h3>
-        <div style="margin-bottom: 40px; border-radius: 20px; overflow: hidden; max-width: 600px; margin: 0 auto 30px;"
-            class="reveal">
-            <img src="imagenjocho.jpg" alt="Hot-Dogs de Benito" style="width: 100%; height: auto; display: block;">
+        <div class="image-reveal-wrapper reveal">
+            <img src="imagenjocho.jpg" alt="Hot-Dogs de Benito">
         </div>
         <div class="menu-grid">
             <div class="menu-item reveal">
@@ -120,12 +124,13 @@
             <p style="color: #666; max-width: 600px; margin: 0 auto 40px;">Abierto de Martes a Domingo de 8:00 PM a
                 11:00 PM.
                 ¡Te esperamos para compartir el auténtico sabor!</p>
-            <div style="display: flex; justify-content: center; flex-wrap: wrap; gap: 40px; margin-bottom: 40px;">
+            <div class="footer-grid">
                 <div style="width: 100%; max-width: 500px;">
-                    <h4 style="color: var(--primary); margin-bottom: 15px;">Ubicación</h4>
-                    <p style="margin-bottom: 15px;">Sta. Clara 16, San Roman, 94542 La Luz Francisco I. Madero, Ver.</p>
+                    <h4 style="color: var(--primary); margin-bottom: 20px; font-size: 1.5rem;">Ubicación</h4>
+                    <p style="margin-bottom: 20px; color: #ccc;">Sta. Clara 16, San Roman, 94542 La Luz Francisco I.
+                        Madero, Ver.</p>
                     <div
-                        style="border-radius: 15px; overflow: hidden; height: 300px; box-shadow: 0 10px 30px rgba(0,0,0,0.5);">
+                        style="border-radius: 24px; overflow: hidden; height: 350px; box-shadow: 0 20px 40px rgba(0,0,0,0.4); border: 1px solid var(--glass-border);">
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d544.3899889894205!2d-96.96673750877379!3d18.882970291163137!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85c4e4d902acea4b%3A0x9fab741189a91f6b!2sTacos%20De%20Benito!5e1!3m2!1ses-419!2smx!4v1771449803651!5m2!1ses-419!2smx"
                             width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
@@ -133,8 +138,9 @@
                     </div>
                 </div>
                 <div>
-                    <h4 style="color: var(--primary); margin-bottom: 15px;">Para saber más información</h4>
-                    <div style="display: flex; gap: 20px; justify-content: center; margin-top: 10px;">
+                    <h4 style="color: var(--primary); margin-bottom: 20px; font-size: 1.5rem;">Para saber más
+                        información</h4>
+                    <div style="display: flex; gap: 20px; justify-content: flex-end; margin-top: 10px;">
                         <a href="https://www.facebook.com/TacosDeBenito" target="_blank" class="social-icon"
                             title="Facebook">
                             <i class="fab fa-facebook-f"></i>
@@ -146,7 +152,8 @@
                     </div>
                 </div>
             </div>
-            <p style="font-size: 0.9rem; color: #444;">&copy; 2026 Tacos de Benito. Todos los derechos reservados.</p>
+            <p style="font-size: 0.9rem; color: #444; margin-top: 80px; text-align: center; width: 100%;">&copy; 2026
+                Tacos de Benito. Todos los derechos reservados.</p>
         </div>
     </footer>
 
@@ -168,11 +175,9 @@
         window.addEventListener('scroll', () => {
             const header = document.querySelector('header');
             if (window.scrollY > 50) {
-                header.style.background = 'rgba(0, 0, 0, 0.9)';
-                header.style.padding = '1rem 5%';
+                header.classList.add('scrolled');
             } else {
-                header.style.background = 'rgba(0, 0, 0, 0.4)';
-                header.style.padding = '1.5rem 5%';
+                header.classList.remove('scrolled');
             }
         });
 
