Added tacos2.jpg to Tacos Clásicos section

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
         <h2 class="section-title reveal">Nuestro Menú</h2>
 
         <h3 style="color: var(--primary); margin-bottom: 20px; font-size: 2rem;" class="reveal">Tacos Clásicos</h3>
+        <div class="image-reveal-wrapper reveal">
+            <img src="tacos2.jpg" alt="Especialidades de Benito">
+        </div>
         <div class="menu-grid" style="margin-bottom: 50px;">
             <div class="menu-item reveal">
                 <h3>Maciza</h3>
