Logo background fix and clickable scroll-to-top functionality

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
 <body>
     <header>
-        <div class="logo">
+        <a href="#inicio" class="logo">
             <img src="logo.jpg" alt="Tacos de Benito">
             <span>Tacos de Benito</span>
-        </div>
+        </a>
         <nav>
             <ul>
                 <li><a href="#inicio">Inicio</a></li>
@@ -120,10 +120,10 @@
     <footer id="contacto"
         style="padding: 100px 5%; background: var(--dark); border-top: 1px solid rgba(255,255,255,0.05); text-align: center;">
         <div class="reveal">
-            <div class="logo" style="margin-bottom: 30px; justify-content: center;">
+            <a href="#inicio" class="logo" style="margin-bottom: 30px; justify-content: center;">
                 <img src="logo.jpg" alt="Tacos de Benito" style="height: 80px;">
                 <span>Tacos de Benito</span>
-            </div>
+            </a>
             <p style="color: #666; max-width: 600px; margin: 0 auto 40px;">Abierto de Martes a Domingo de 8:00 PM a
                 11:00 PM.
                 ¡Te esperamos para compartir el auténtico sabor!</p>
