Update Maciza description to beef (res)

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="menu-grid" style="margin-bottom: 50px;">
             <div class="menu-item reveal">
                 <h3>Maciza</h3>
-                <p>Carne de cerdo tierna y jugosa.</p>
+                <p>Carne de res tierna y jugosa.</p>
                 <div class="price"><span>$17 MXN</span></div>
             </div>
             <div class="menu-item reveal">
